fix: overflow scroll for columns

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden; /* This prevents the entire page from scrolling */
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header, footer {
@@ -54,7 +55,7 @@ select {
 .dashboard {
   display: flex;
   flex-direction: column;
-  width: 85vw;
+  width: 80vw;
   height: 84vh;
   flex-grow: 1;
   justify-content: center;
@@ -63,6 +64,10 @@ select {
 .dashboard-header {
   display: flex;
   gap: 10px;
+  box-sizing: border-box;
+  min-height: 10%;
+  max-height: 10%;
+  flex-shrink: 0;
   padding-inline: 10px;
   padding-top: 10px;
   justify-content: space-between;
@@ -80,7 +85,10 @@ select {
 .dashboard-columns {
   display: flex;
   gap: 10px;
-  flex-grow: 1;
+  box-sizing: border-box;
+  min-height: 90%;
+  max-height: 90%;
+  flex-grow: 0;
   padding-inline: 10px;
   padding-block: 10px;
   justify-content: center;
@@ -102,9 +110,7 @@ select {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  
+  text-align: center;  
 }
 
 .logo-img {
@@ -141,12 +147,10 @@ select {
 
 .sidebar-menu a, h3 {
   text-decoration: none;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .footer button {
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .column {
@@ -154,6 +158,13 @@ select {
   color: white;
   border: 4px solid var(--main-color);
   border-radius: 10px;
+  overflow-y: auto;
+}
+
+.column-header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .column h3 {
@@ -173,7 +184,7 @@ select {
 
 .task {
   background-color: var(--task-bg-color);
-  box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 2px 3px 2px rgba(100, 100, 100, 0.4);
   color: var(--main-color);
   border-radius: 10px;
   margin: 10px;
@@ -220,7 +231,6 @@ select {
 
 .task-header button {
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .task-header-child {
@@ -269,9 +279,12 @@ select {
   display: flex;
   flex-grow: 1;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 2em;
   text-align: center;
+  width: 80vw;
+  height: 84vh;
 }
 
 .about-info {
@@ -279,15 +292,17 @@ select {
   text-align: justify;
 }
 
-.about-info h1 {
+.about h1 {
   text-align: center;
+  margin: 0;
 }
 
 .team-info {
   width: 50vw;
   text-align: center;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 1em;
 }
 
